fix(webview): keep completed styling on collapsed todo preview

--- a/webview-ui/src/app/todo/todo-item/todo-item.component.scss
+++ b/webview-ui/src/app/todo/todo-item/todo-item.component.scss
@@ -114,6 +114,11 @@
 			color: var(--vscode-input-placeholderForeground);
 		}
 
+		span.collapsed-text.complete {
+			text-decoration: line-through;
+			color: var(--vscode-input-placeholderForeground);
+		}
+
 		autosize-text-area {
 			display: flex;
 			width: 100%;
